--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Kalachev Vladislav",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.10"
   },
